@@ -1,3 +1,4 @@
+* Add dynamic size limit on the One2Many, Many2Many and Char
 * Replace __tryton__.py by tryton.cfg
 * Allow to use Reference field in One2Many & Many2Many
 * Remove hexmd5 from ModelView.fields_view_get
